--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,21 @@
-
 # Godot-specific ignores
 .import/
-export.cfg
-export_presets.cfg
+
+# Imported translations (automatically generated from CSV files)
+*.translation
 
 # Mono-specific ignores
 .mono/
 data_*/
+mono_crash.*.json
+
+# System/tool-specific ignores
+.directory
+*~
+
+# Godot Git Plugin
+bin/
+build/
+
+# WAT Test Results
+tests/results/
