--- a/.gitignore
+++ b/.gitignore
@@ -13,8 +13,8 @@ mono_crash.*.json
 .directory
 *~
 
-# Godot Git Plugin
-bin/
+# Godot Git Plugin (platform-specific, so it should be ignored)
+addons/godot-git-plugin
 build/
 
 # WAT Test Results
