--- a/.gitattributes
+++ b/.gitattributes
@@ -3,3 +3,4 @@
 *.glb filter=lfs diff=lfs merge=lfs -text
 *.ogg filter=lfs diff=lfs merge=lfs -text
 *.ttf filter=lfs diff=lfs merge=lfs -text
+*.dll filter=lfs diff=lfs merge=lfs -text
