--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -6,7 +6,7 @@ runnable=true
 custom_features=""
 export_filter="all_resources"
 include_filter=""
-exclude_filter="addons/, bin/, build/, script_templates/, tests/, git_api.gdnlib, git_api.gdns"
+exclude_filter="addons/, build/, tests/"
 export_path="build/windows/the-fat-hand.exe"
 script_export_mode=1
 script_encryption_key=""
@@ -48,7 +48,7 @@ runnable=true
 custom_features=""
 export_filter="all_resources"
 include_filter=""
-exclude_filter="addons/, bin/, build/, script_templates/, tests/, git_api.gdnlib, git_api.gdns"
+exclude_filter="addons/, build/, tests/"
 export_path="build/web/index.html"
 script_export_mode=1
 script_encryption_key=""
@@ -58,8 +58,8 @@ script_encryption_key=""
 custom_template/debug=""
 custom_template/release=""
 variant/export_type=0
-vram_texture_compression/for_desktop=false
-vram_texture_compression/for_mobile=true
+vram_texture_compression/for_desktop=true
+vram_texture_compression/for_mobile=false
 html/custom_html_shell=""
 html/head_include=""
 html/canvas_resize_policy=2
