--- a/.gitattributes
+++ b/.gitattributes
@@ -4,3 +4,4 @@
 *.ogg filter=lfs diff=lfs merge=lfs -text
 *.ttf filter=lfs diff=lfs merge=lfs -text
 *.dll filter=lfs diff=lfs merge=lfs -text
+*.ico filter=lfs diff=lfs merge=lfs -text
